# stream-rs

./: Cargo.toml  LICENSE  README.md  cargo-watch
.github/workflows/: main.yml
src/: buf.rs  error.rs  io.rs  lib.rs  reader.rs  version.rs  writer.rs
tests/: lib.rs
