[package]
name = "stream"
version = "0.1.0"
authors = ["Eric Lagergren"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ericlagergren/stream-rs"
keywords = [ "oae2", "online", "encryption", "stream" ]
categories = [ "cryptography" ]

[dependencies]
aead = "0.5"
byteorder = "1.4"
cipher = "0.4"
generic-array = "0.14"
hkdf = "0.12"
sha2 = "0.10"
typenum = "1.16"
zeroize = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
aes = "0.8"
base64 = "0.20"
chacha20poly1305 = "0.10"
ctr = "0.9"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
