[package]
name = "stream"
version = "0.1.0"
description = """
TODO
"""
authors = ["Eric Lagergren"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/stream-rs"
keywords = [ "oae2", "online", "encryption", "stream" ]
categories = [ "cryptography", "no-std" ]

[features]
default = []
# Allocate memory.
alloc = []
# Use std.
std = ["alloc"]

[dependencies]
aead = { version = "0.5" }
byteorder = { version = "1.4", default-features = false }
cfg-if = { version = "1" }
cipher = { version = "0.4" }
generic-array = { version = "0.14" }
hkdf = { version = "0.12" }
rand_core = { version = "0.6" }
sha2 = { version = "0.10" }
typenum = { version = "1" }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aes = { version = "0.8" }
base64 = { version = "0.20" }
chacha20poly1305 = { version = "0.10" }
ctr = { version = "0.9" }
flate2 = { version = "1.0" }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
